ping を追加
